--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "next": "^16.0.10",
     "openai": "^6.10.0",
     "react": "19.2.1",
-    "react-dom": "19.2.1",
-    "ws": "^8.18.3"
+    "react-dom": "19.2.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
