--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.25",
     "next": "^16.0.10",
+    "node-fetch": "^3.3.2",
     "openai": "^6.10.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
