Added pronunciation layer for numbers

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,28 @@
 # n8n Brain Webhook URL (streaming endpoint)
-NEXT_PUBLIC_N8N_BRAIN_WEBHOOK_URL=https://your-n8n-instance.com/webhook/your-webhook-id
+NEXT_PUBLIC_N8N_BRAIN_WEBHOOK_URL=your-api-key
+# https://develop.n8n.collectivexp.io:5678/webhook/dc8701e2-e5de-492c-b145-eb358799326d
+
+# https://develop.n8n.collectivexp.io:5678/webhook/acaca94c-e498-401b-8915-d6645cd66bdb
+# http://localhost:5678/webhook/acaca94c-e498-401b-8915-d6645cd66bdb
 
 # OpenAI API Configuration
 # Required for: Whisper STT (cross-browser), Query rephrasing/cleanup
-# Get your API key from: https://platform.openai.com/api-keys
-OPENAI_API_KEY=sk-proj-your-openai-api-key-here
+OPENAI_API_KEY=your-api-key
 
 # MiniMax API Configuration (Server-side only - SECURE)
 # Required for: High-quality TTS streaming with custom voice cloning
 # Get your API key and Group ID from: https://platform.minimax.io/
 # API key is kept secret on the server, never exposed to the browser
-MINIMAX_API_KEY=your-minimax-api-key-here
-MINIMAX_GROUP_ID=your-minimax-group-id-here
+MINIMAX_API_KEY=your-api-key
+MINIMAX_GROUP_ID=your-api-key
 
 # MiniMax Voice Configuration
 # Using default voice (available to all users)
 # Options: 'female-shaonv' (young female), 'male-qn-qingse' (male), 'female-yujie' (mature female), 
 #          'male-qn-jingying' (business male), 'Audiobook_male_1', 'Audiobook_female_1'
 MINIMAX_VOICE_ID=moss_audio_10aac8df-bbf2-11f0-9c0e-b68b6d146e10
+
+# ElevenLabs API Configuration
+# Required for: WebSocket TTS streaming (client-side) and REST API (server-side)
+ELEVENLABS_API_KEY=your-api-key
+ELEVENLABS_VOICE_ID=EST9Ui6982FZPSi7gCHi
