--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,13 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env
+.env.*
 .env*.local
 !.env.example
+
+# local secrets/config
+.envrc
+.npmrc
 
 # vercel
 .vercel
