--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "framer-motion": "^12.23.25",
     "next": "^16.0.10",
     "node-fetch": "^3.3.2",
+    "number-to-words": "^1.2.4",
     "openai": "^6.10.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
