Updated answer generation from n8n to AIP

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# n8n Brain Webhook URL (streaming endpoint)
-NEXT_PUBLIC_N8N_BRAIN_WEBHOOK_URL=your-api-key
+# AIP ActionCable Configuration (client-side)
+# Example: ws://localhost:3001/cable
+NEXT_PUBLIC_AIP_CABLE_URL=your-cable-url
+NEXT_PUBLIC_AIP_MODEL_ID=your-model-id
 
 # OpenAI API Configuration
 # Required for: Whisper STT (cross-browser), Query rephrasing/cleanup
@@ -22,3 +24,8 @@ MINIMAX_VOICE_ID=female-shaonv
 # Required for: WebSocket TTS streaming (client-side) and REST API (server-side)
 ELEVENLABS_API_KEY=your-api-key
 ELEVENLABS_VOICE_ID=EST9Ui6982FZPSi7gCHi
+
+# AIP ActionCable Configuration (client-side)
+# Example: ws://localhost:3001/cable
+NEXT_PUBLIC_AIP_CABLE_URL=ws://localhost:3001/cable
+NEXT_PUBLIC_AIP_MODEL_ID=develop_org_7_Gina_Test2
