--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@rails/actioncable": "^8.1.200",
     "framer-motion": "^12.23.25",
     "next": "^16.0.10",
     "node-fetch": "^3.3.2",
